added gprofiler results to EM steps

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -5,7 +5,11 @@ language:
 delete_merged_file: true
 repo: https://https://github.com/baderlab/EnrichmentMap_Protocol
 output_dir: docs
-rmd_files: ["index.Rmd","01-Materials.Rmd","02-Software_installation.Rmd","03-Pathway_enrichment_analysis.Rmd","04-Pathway_enrichment_analysis_gprofiler.Rmd","05-Pathway_enrichment_analysis_gsea.Rmd"]
+rmd_files: ["index.Rmd","01-Materials.Rmd","02-Software_installation.Rmd",
+"03-Pathway_enrichment_analysis.Rmd","04-Pathway_enrichment_analysis_gprofiler.Rmd",
+"05-Pathway_enrichment_analysis_gsea.Rmd",
+"06-EnrichmentMap_analysis.Rmd","07-EnrichmentMap_analysis_gprofiler.Rmd", "references.Rmd"]
 clean: [packages.bib, bookdown.bbl]
 new_session: no
 bookdown::gitbook:
+  split_bib: yes
