--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -12,7 +12,8 @@ rmd_files: ["index.Rmd","01-Materials.Rmd","02-Software_installation.Rmd",
 "08-EnrichmentMap_analysis_gsea.Rmd","09-EnrichmentMap_navigation.Rmd",
 "10-Heatmap_navigation.Rmd","10A-Show_in_GeneMANIA.Rmd",
 "10B-Show_in_PathwayCommons.Rmd","10C-Show_in_String.Rmd","11-Network_organization.Rmd",
-"12-Major_biological_themes.Rmd","references.Rmd"]
+"12-Major_biological_themes.Rmd","13-Simplified_network.Rmd",
+"14-Manual_arrangement.Rmd","15-Subnetwork.Rmd","16-Export_and_save.Rmd","references.Rmd"]
 clean: [packages.bib, bookdown.bbl]
 new_session: no
 bookdown::gitbook:
